--- a/alura-books-main/alura-books-main/styles/header.css
+++ b/alura-books-main/alura-books-main/styles/header.css
@@ -1,7 +1,10 @@
 .cabeçalho {
     background-color: var(--branco);
-  }
-  .container__imagem {
-    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     }
-    
+    .container {
+        display: flex;
+        align-items: center;
+        }
