--- a/alura-books-main/style.css
+++ b/alura-books-main/style.css
@@ -1,4 +1,4 @@
-@import url("styles/header.css");
+
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
@@ -9,7 +9,7 @@ body {
     .cabeçalho__menu-hamburguer {
         width: 24px;
         height: 24px;
-        background-image: url("../img/Menu.svg");
+        background-image: url(“../img/Menu.svg”);
         display: inline-block;
         }
     .cabeçalho {
