--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-
+@import url("styles/header.css");
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+
 }
 body {
     background-color: var(--cor-de-fundo);
@@ -15,4 +18,11 @@ body {
     .cabeçalho {
             background-color: var(--branco);
             }
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+     text-transform: uppercase;
+        }
   
